Test refactor